--- a/cv.tex
+++ b/cv.tex
@@ -142,41 +142,43 @@
 % \end{tabularx}
 
 \begin{tabularx}{\linewidth}{@{} C @{}}
-\Huge{Your Name} \\[7.5pt]
-\href{https://github.com/username}{\raisebox{-0.05\height}\faGithub\ username} \ $|$ \ 
-\href{https://linkedin.com/in/username}{\raisebox{-0.05\height}\faLinkedin\ username} \ $|$ \ 
-\href{https://mysite.com}{\raisebox{-0.05\height}\faGlobe \ mysite.com} \ $|$ \ 
-\href{mailto:email@mysite.com}{\raisebox{-0.05\height}\faEnvelope \ email@mysite.com} \ $|$ \ 
-\href{tel:+000000000000}{\raisebox{-0.05\height}\faMobile \ +00.00.000.000} \\
+\Huge{Arjan Singh Ellingson} \\[7.5pt]
+\href{https://github.com/asellingson28}{\raisebox{-0.05\height}\faGithub\ GitHub} \ $|$ \ 
+\href{https://www.linkedin.com/in/arjan-singh-ellingson/}{\raisebox{-0.05\height}\faLinkedin\ LinkedIn} \ $|$ \ 
+\href{https://asellingson28.github.io/}{\raisebox{-0.05\height}\faGlobe \ https://asellingson28.github.io/} \ $|$ \ 
+\href{mailto:aselling@calpoly.edu}{\raisebox{-0.05\height}\faEnvelope \ aselling@calpoly.edu} \ $|$ \ 
+\href{tel:+19528470370}{\raisebox{-0.05\height}\faMobile \ +1 (952) 847-0370} \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
 % EXPERIENCE SECTIONS
 %----------------------------------------------------------------------------------------
 
-%Interests/ Keywords/ Summary
-\section{Summary}
-This CV can also be automatically complied and published using GitHub Actions. For details, \href{https://github.com/jitinnair1/autoCV}{click here}.
-
 %Experience
 \section{Work Experience}
 
-\begin{jobshort}{Designation}{Jan 2021 - present}
-long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width
-\end{jobshort}
-
-
-\begin{joblong}{Designation}{Mar 2019 - Jan 2021}
-\item long long line of blah blah that will wrap when the table fills the column width
-\item again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah. again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah
+\begin{joblong}{Intern for the Kontinua Foundation \textbullet\ Full Time / Freelance \textbullet\ Remote}{June 2025 - present}
+\item Worked under direct supervision of Georgia Tech Professor Aaron Hillegass, developing quizzes and assessments for the Kontinua Foundation's open-source educational resources.
+\item Produced quizzes aligning with Bloom's Taxonomy, targeting levels from recall to higher-order creation.
+\item Focused quiz questions to measure prerequisite conformity, progression, and alignment with learning objectives.
+\item Created and formatted assessments for high school students using LaTeX, ensuring precision and consistency.
+\item Edited and revised textbook chapters, contributing to the instructional quality of published educational resources.
+\item Wrote Python scripts to parse JSON files, detect prerequisite gaps and duplicate objectives, and support automated content validation, as well as create draft chapter quiz PDFs.
+\item Automated the compilation of LaTeX source files into 36 PDF workbooks using Python scripts, enabling efficient public distribution of draft resources.
 \end{joblong}
-  
-%Projects
-\section{Projects}
+
+
+\begin{jobshort}{Lead Sensei for Code Ninjas \textbullet\ Part Time \textbullet\ Chanhassen, MN}{May 2021 - Sept 2024}
+Instructed 200+ students at a Black Belt Certified Center; connected personally with students while teaching in-depth STEM coding and programming game development concepts in Scratch, JavaScript, and C++.
+\end{jobshort}
+%----------------------------------------------------------------------------------------
+%Leadership Experience
+%----------------------------------------------------------------------------------------
+\section{Leadership Experience}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Some Project} & \hfill \href{https://some-link.com}{Link to Demo} \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
+\textbf{Cal Poly Combat Robotics Club (CPCPC)} & \hfill Jan 2025 - Present \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{Our mission is to promote and advance the field of combat robotics through in-club competitions, workshops, and hands-on projects. We design and build 150g individual robots for internal competitions and collaborate on 1lb team robots to compete in regional events hosted by organizations such as Southern California Attack Robotics (SCAR). We also represent Cal Poly at combat robotics competitions across California.}   \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
@@ -184,34 +186,24 @@ long long line of blah blah that will wrap when the table fills the column width
 %----------------------------------------------------------------------------------------
 \section{Education}
 \begin{tabularx}{\linewidth}{@{}l X@{}}	
-2030 - present & PhD (Subject) at \textbf{University} \hfill \normalsize (GPA: 4.0/4.0) \\
-
-2023 - 2027 & Bachelor's Degree at \textbf{College} \hfill (GPA: 4.0/4.0) \\ 
-
-2022 & Class 12th Some Board \hfill  (Grades) \\
-
-2021 & Class 10th Some Board \hfill  (Grades) \\
+2024 - 2027 & B.S. in Software Engineering \textbf{California Polytechnic State University} \hfill (GPA: 3.56/4.0) \\
+& \begin{itemize}[leftmargin=*, nosep]
+    \item Honors Program Student 
+    \item Dean's List (3 Quarters) 
+    \item President's List Recipient
+  \end{itemize}
 \end{tabularx}
-
-%----------------------------------------------------------------------------------------
-%	PUBLICATIONS
-%----------------------------------------------------------------------------------------
-\section{Publications}
-\begin{refsection}[citations.bib]
-\nocite{*}
-\printbibliography[heading=none]
-\end{refsection}
 
 %----------------------------------------------------------------------------------------
 %	SKILLS
 %----------------------------------------------------------------------------------------
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Some Skills &  \normalsize{This, That, Some of this and that etc.}\\
-Some More Skills  &  \normalsize{Also some more of this, Some more that, And some of this and that etc.}\\  
+Programming Languages &  \normalsize{Java, Python, LaTeX, SQL, C, C++, Basic JS}\\
+PKM Software  &  \normalsize{Obsidian, Git, Kanban Workflow, Visual Studio Code, GitHub}\\  
+3D Modeling and Printing  &  \normalsize{Fusion360, Solidworks 2022, Bambu Studio, Orca Slicer, Prusa Slicer}\\
 \end{tabularx}
 
 \vfill
 \center{\footnotesize Last updated: \today}
-
 \end{document}
