--- a/cv.tex
+++ b/cv.tex
@@ -145,7 +145,7 @@
 \Huge{Arjan Singh Ellingson} \\[7.5pt]
 \href{https://github.com/asellingson28}{\raisebox{-0.05\height}\faGithub\ GitHub} \ $|$ \ 
 \href{https://www.linkedin.com/in/arjan-singh-ellingson/}{\raisebox{-0.05\height}\faLinkedin\ LinkedIn} \ $|$ \ 
-\href{https://asellingson28.github.io/}{\raisebox{-0.05\height}\faGlobe \ https://asellingson28.github.io/} \ $|$ \ 
+% \href{https://asellingson28.github.io/}{\raisebox{-0.05\height}\faGlobe \ https://asellingson28.github.io/} \ $|$ \ 
 \href{mailto:aselling@calpoly.edu}{\raisebox{-0.05\height}\faEnvelope \ aselling@calpoly.edu} \ $|$ \ 
 \href{tel:+19528470370}{\raisebox{-0.05\height}\faMobile \ +1 (952) 847-0370} \\
 \end{tabularx}
