--- a/cv.tex
+++ b/cv.tex
@@ -186,7 +186,7 @@ Instructed 200+ students at a Black Belt Certified Center; connected personally 
 %----------------------------------------------------------------------------------------
 \section{Education}
 \begin{tabularx}{\linewidth}{@{}l X@{}}	
-2024 - 2027 & B.S. in Software Engineering \textbf{California Polytechnic State University} \hfill (GPA: 3.56/4.0) \\
+2024 - 2027 & B.S. Software Engineering \textbf{California Polytechnic State University, San Luis Obispo} \hfill (GPA: 3.56/4.0) \\
 & \begin{itemize}[leftmargin=*, nosep]
     \item Honors Program Student 
     \item Dean's List (3 Quarters) 
