--- a/cv.tex
+++ b/cv.tex
@@ -186,11 +186,11 @@ Instructed 200+ students at a Black Belt Certified Center; connected personally 
 %----------------------------------------------------------------------------------------
 \section{Education}
 \begin{tabularx}{\linewidth}{@{}l X@{}}	
-2024 - 2027 & B.S. Software Engineering \textbf{California Polytechnic State University, San Luis Obispo} \hfill (GPA: 3.56/4.0) \\
+2024 - 2027 & B.S. Software Engineering \textbf{California Polytechnic State University, San Luis Obispo} \\
 & \begin{itemize}[leftmargin=*, nosep]
-    \item Honors Program Student 
-    \item Dean's List (3 Quarters) 
-    \item President's List Recipient
+    \item GPA: 3.57/4.00
+    \item Honors Program Student, Dean's List (x3), President's List Recipient
+    \item Relevant Coursework: Data Structures and Algorithms, Object-Oriented Programming, Software Engineering, Systems Programming
   \end{itemize}
 \end{tabularx}
 
