--- a/cv.tex
+++ b/cv.tex
@@ -199,9 +199,9 @@ Instructed 200+ students at a Black Belt Certified Center; connected personally 
 %----------------------------------------------------------------------------------------
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Programming Languages &  \normalsize{Java, Python, LaTeX, SQL, C, C++, Basic JS}\\
-PKM Software  &  \normalsize{Obsidian, Git, Kanban Workflow, Visual Studio Code, GitHub}\\  
-3D Modeling and Printing  &  \normalsize{Fusion360, Solidworks 2022, Bambu Studio, Orca Slicer, Prusa Slicer}\\
+\textbf{Programming Languages} &  \normalsize{Java, Python, LaTeX, SQL, C, C++, Basic JS}\\
+\textbf{PKM Software}  &  \normalsize{Obsidian, Git, Kanban Workflow, Visual Studio Code, GitHub}\\  
+\textbf{3D Modeling and Printing}  &  \normalsize{Fusion360, Solidworks 2022, Bambu Studio, Orca Slicer, Prusa Slicer}\\
 \end{tabularx}
 
 \vfill
