--- a/cv.tex
+++ b/cv.tex
@@ -190,7 +190,7 @@ Instructed 200+ students at a Black Belt Certified Center; connected personally 
 & \begin{itemize}[leftmargin=*, nosep]
     \item GPA: 3.57/4.00
     \item Honors Program Student, Dean's List (x3), President's List Recipient
-    \item Relevant Coursework: Data Structures and Algorithms, Object-Oriented Programming, Software Engineering, Systems Programming
+    \item Relevant Coursework: Data Structures and Algorithms, Object-Oriented Programming, Software Engineering, Systems Programming, Financial Decision Making, Ethics, Science, and Tech
   \end{itemize}
 \end{tabularx}
 
